force-app/main/default/objects/Exam_Registration__c/Exam_Registration__c.object-meta.xml
<CustomObject>
    <label>Exam Registration</label>
    <nameField>
        <displayFormat>ER-{00000}</displayFormat>
        <label>Exam Registration Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Exam Registrations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>