force-app/main/default/objects/Exam_Registration__c/fields/Exam_Date__c.field-meta.xml
<CustomField>
    <fullName>Exam_Date__c</fullName>
    <formula>Exam__r.Date__c</formula>
    <formulaTreatBlanksAs>BlankAsBlank</formulaTreatBlanksAs>
    <label>Exam Date</label>
    <type>Date</type>
</CustomField>