force-app/main/default/objects/Exam_Registration__c/fields/Registration_Status__c.field-meta.xml
<CustomField>
    <fullName>Registration_Status__c</fullName>
    <label>Registration Status</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Not yet completed</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
            <value>
                <fullName>Not completed</fullName>
            </value>
            <value>
                <fullName>Unregistered</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>