force-app/main/default/objects/Exam_Registration__c/fields/Result__c.field-meta.xml
<CustomField>
    <fullName>Result__c</fullName>
    <formula>IF(
    OR(
        ISBLANK(Grade__c),
        NOT(ISPICKVAL(Registration_Status__c, &quot;Completed&quot;))
    ),
    &quot;&quot;,
    IF(
        Grade__c &gt;= 6,
        &quot;Passed&quot;,
        &quot;Not passed&quot;
    )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Result</label>
    <type>Text</type>
</CustomField>