force-app/main/default/objects/Exam_Registration__c/fields/Subject_Display__c.field-meta.xml
<CustomField>
    <fullName>Subject_Display__c</fullName>
    <formula>Exam__r.Subject__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsBlank</formulaTreatBlanksAs>
    <label>Subject</label>
    <type>Text</type>
</CustomField>