force-app/main/default/objects/Exam_Registration__c/fields/Unregistration_Date__c.field-meta.xml
<CustomField>
    <fullName>Unregistration_Date__c</fullName>
    <label>Unregistration Date</label>
    <type>Date</type>
</CustomField>