force-app/main/default/objects/Exam_Registration__c/validationRules/Completed_Requires_Grade.validationRule-meta.xml
<ValidationRule>
    <fullName>Completed_Requires_Grade</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
    ISPICKVAL(Registration_Status__c, &quot;Completed&quot;),
    ISBLANK(Grade__c)
)</errorConditionFormula>
    <errorDisplayField>Grade__c</errorDisplayField>
    <errorMessage>A completed exam must have a grade.</errorMessage>
</ValidationRule>