force-app/main/default/objects/Exam_Registration__c/validationRules/Grade_between_1_and_10.validationRule-meta.xml
<ValidationRule>
    <fullName>Grade_between_1_and_10</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
    NOT(ISBLANK(Grade__c)),
    OR(
        Grade__c &lt; 1,
        Grade__c &gt; 10
    )
)</errorConditionFormula>
    <errorMessage>Grade must be between 1 and 10.</errorMessage>
</ValidationRule>