force-app/main/default/objects/Exam_Registration__c/validationRules/Grade_Only_For_Completed.validationRule-meta.xml
<ValidationRule>
    <fullName>Grade_Only_For_Completed</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
    NOT(ISBLANK(Grade__c)),
    NOT(ISPICKVAL(Registration_Status__c, &quot;Completed&quot;))
)</errorConditionFormula>
    <errorDisplayField>Grade__c</errorDisplayField>
    <errorMessage>A grade can only be entered for a completed exam.</errorMessage>
</ValidationRule>