force-app/main/default/objects/Exam_Registration__c/validationRules/No_Completion_Before_Exam.validationRule-meta.xml
<ValidationRule>
    <fullName>No_Completion_Before_Exam</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
    NOT(ISBLANK(Exam__r.Date__c)),
    Exam__r.Date__c &gt; TODAY(),
    OR(
        ISPICKVAL(Registration_Status__c, &quot;Completed&quot;),
        ISPICKVAL(Registration_Status__c, &quot;Not completed&quot;),
        NOT(ISBLANK(Grade__c))
    )
)</errorConditionFormula>
    <errorMessage>An exam registration cannot be graded or completed before the exam date.</errorMessage>
</ValidationRule>