force-app/main/default/objects/Exam_Registration__c/validationRules/No_Withdrawal_After_Exam.validationRule-meta.xml
<ValidationRule>
    <fullName>No_Withdrawal_After_Exam</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
    NOT(ISBLANK(Exam__r.Date__c)),
    ISPICKVAL(Registration_Status__c, &quot;Unregistered&quot;),
    Exam__r.Date__c &lt; TODAY()
)</errorConditionFormula>
    <errorMessage>A student cannot be withdrawn after the exam date.</errorMessage>
</ValidationRule>