force-app/main/default/objects/Exam_Registration__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>Student_Display__c</columns>
    <columns>Exam__c</columns>
    <columns>Exam_Date__c</columns>
    <columns>Subject_Display__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>